# dotfiles

./: .editorconfig  .gitignore  .ls-lint.yml  .wezterm.lua  .zprofile  .zshrc  README.md  flake.nix  lefthook.yml  pyproject.toml  renovate.json
.config/claude/: CLAUDE.md  settings.local.json
.config/claude/guidelines/: coding_guideline.md  python_coding_style.md
.config/claude/statsig/: statsig.cached.evaluations.1155252920  statsig.cached.evaluations.1584814025  statsig.cached.evaluations.2014769715  statsig.cached.evaluations.3008266758  statsig.cached.evaluations.307566463  statsig.cached.evaluations.3831182545  statsig.cached.evaluations.3846846520  statsig.cached.evaluations.3874307798  statsig.cached.evaluations.462f4ba725  statsig.cached.evaluations.565288421  statsig.cached.evaluations.603540172  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.config/claude/todos/: 0cd252a5-29ee-4355-9af7-1635000d1e2a-agent-0cd252a5-29ee-4355-9af7-1635000d1e2a.json  0cd252a5-29ee-4355-9af7-1635000d1e2a-agent-ac025476-300d-4e41-95e1-8bec388120e0.json  7cddf2b1-7252-453f-a556-e5d77ddd8b12.json
.config/ghostty/: config
.config/karabiner/automatic_backups/: karabiner_20230905.json  karabiner_20241113.json
.config/nvim/: init.vim
.config/raycast/: config.json
.github/workflows/: ci.yml  codeql.yml  gha_lint.yml
agents/: AGENTS.md  CLAUDE.md
agents/hooks/: audit_compaction.sh  audit_permission_denied.sh  audit_tool_call.sh  block_dangerous_git.sh  block_secret_content.sh  command_allowlist.sh  guard_allowed_commands.sh  guard_dangerous_git.sh  guard_forbidden_commands.sh  guard_harness_files.sh  guard_secret_commit.sh  guard_secret_content.sh  lint_format_gha.sh  lint_format_js.sh  lint_format_json_toml.sh  lint_format_lua.sh  lint_format_md.sh  lint_format_nix.sh  lint_format_py.sh  lint_format_rs.sh  lint_format_sh.sh  lint_format_tex.sh  lint_format_txt.sh  log_permission_denied.sh  log_tool_call.sh  macos_notify_await.sh  notify_macos_await.sh  prevent_secret_commit.sh  run_related_tests.sh
agents/hooks/lib/: audit_log.sh  lint_format.sh  shell_parse.sh
agents/hooks/rules/: related_test_defaults.json  related_test_extensions.json  secret_content_patterns.json
agents/scripts/: render_skills.py
agents/skills/bash-style/: INSTRUCTIONS.md  SKILL.md
agents/skills/gha-style/: INSTRUCTIONS.md  SKILL.md
agents/skills/git-commit-split/: SKILL.md
agents/skills/marp-style/: SKILL.md
agents/skills/skill-auditor/: SKILL.md  pyproject.toml
agents/skills/skill-auditor/agents/: routing-analyst.md
agents/skills/skill-auditor/references/: architecture.md  methodology.md
agents/skills/skill-auditor/schemas/: schemas.md
agents/skills/skill-auditor/scripts/: apply_patches.py  collect_skills.py  collect_transcripts.py  generate_report.py  run_audit.py
agents/skills/skill-auditor/tests/: test_collect_skills.py  test_collect_transcripts.py  test_run_audit.py
bash/: .bashrc
ccstatusline/: settings.json
claude/: CLAUDE.md  settings.base.json  settings.json
claude/hooks/: bark_notify.sh  block_add_all.sh  block_dangerous_git.sh  block_no_verify.sh  block_secret_content.sh  check_prohibited_commands.sh  focus_workspace.sh  lint_format.sh  lint_format_gha.sh  lint_format_js.sh  lint_format_json_toml.sh  lint_format_lua.sh  lint_format_md.sh  lint_format_nix.sh  lint_format_py.sh  lint_format_rs.sh  lint_format_sh.sh  lint_format_tex.sh  lint_format_txt.sh  log_permission_denied.sh  log_tool_call.sh  macos_notify_await.sh  macos_notify_done.sh  prevent_secret_commit.sh  scan_sensitive_info.sh  stop_notification.sh
claude/plugins/: installed_plugins.json
claude/rules/: asdd_workflow.md  coding_guideline.md  jj_guideline.md  python_coding_style.md
claude/skills/nix-dev-init/templates/python/: flake.nix  gitignore  pyproject.toml
claude/statusline/: statusline.sh
claude/statuslines/: jj_status.sh  rate_limit.sh  statusline.sh
cmux/: settings.json
codex/: config.toml  hooks.json  sync_config.py
codex/hooks/: adapt_block_secret_content.sh  adapt_guard_secret_content.sh  adapt_harness_files.sh  adapt_lint_format.sh  adapt_shell_command.sh  post_apply_patch_lint_format.sh  scan_sensitive_info.sh
docs/adr/: 0001_record_architecture_decisions.md  0002_manage_herdr_plugins_through_home_manager_activation.md
dprint/: dprint.json
ghostty/: config
git/: .gitconfig  ignore
github/: README.md  create_repo.sh  repo_settings.json  ruleset.json  ruleset_base.json  ruleset_python.json  ruleset_rust.json  ruleset_tex.json  ruleset_typescript.json  setup_repo.sh
herdr/: config.toml  sync_plugins.sh
jj/: config.toml
karabiner/: karabiner.json
kawasemi4/Dictionaries/: 個人ユーザ辞書.nudic
kawasemi4/KeySettings/: main.nkset
nix/: overlays.nix
nix/agents/: claude_settings.nix  codex_settings.nix  command_policy.nix  hooks.nix  paths.nix  skills.nix
nix/darwin/: default.nix
nix/home/: default.nix
nvim/: init.lua  selene.toml
prettier/: .prettierrc
raycast/: Raycast 2026-03-14 21.48.13.rayconfig  Raycast 2026-04-15 14.52.13.rayconfig
starship/: jj_prompt.sh  starship.toml
templates/: pyproject.toml  pyproject_pyright.toml
templates/pnpm/: .oxfmtrc.json  .oxlintrc.json  package.json  vitest.config.ts
templates/uv/: .gitignore  pyproject.toml
tests/claude-hooks/: block_dangerous_git.bats  block_secret_content.bats  command_allowlist.bats  lint_format.bats  log_permission_denied.bats  log_tool_call.bats  macos_notify.bats  prevent_secret_commit.bats  settings_allowlist_sync.bats  statusline.bats
tests/codex-hooks/: adapt_block_secret_content.bats  adapt_lint_format.bats  adapt_shell_command.bats
tests/config/: claude_generated_settings.bats  claude_settings_sync.bats  codex_config_sync.bats  codex_hooks_sync.bats  codex_rules_sync.bats  json_syntax.bats  secret_patterns.bats
tests/github/: setup_repo.bats
tests/herdr/: config.bats  sync_plugins.bats
tests/nix/: agent_harness.bats
tests/python/: conftest.py
tmux/: .tmux.conf
yazi/: keymap.toml
zsh/: .zprofile  .zshenv  .zshrc
(+191 files in other folders)
