[project]
name = "project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">= 3.14"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
managed = true
default-groups = ["lint", "typecheck", "test"]
exclude-newer = "1 week"

[dependency-groups]
lint = [
  "ruff>=0.12.1",
]
typecheck = [
  "ty>=0.0.29",
]
test = [
  "pytest>=8.3.5",
  "pytest-mock>=3.0",
  "pytest-cov>=7.1.0",
]
audit = [
  "deptry>=0.25.1",
  "vulture>=2.16",
]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
line-length = 119

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint] # v0.12.1
select = [
  "AIR", # Airflow-specific best practices
  "FAST", # FastAPI-specific checks
  "YTT", # Version-related checks
  "ANN", # Type annotation rules
  "ASYNC", # Async/await-related issues
  "B", # Bugbear rules for likely bugs and dangerous patterns
  "A", # Builtin shadowing rules
  "C4", # Comprehension improvements
  "CPY", # Copyright header checks
  "DTZ", # Datetime/timezone-related issues
  "T10", # Debugger statement detection
  "DJ", # Django-specific checks
  "FIX", # fixme/todo/hack comment detection
  "FA", # __future__ annotations-related checks
  "INT", # gettext / i18n-related checks
  "LOG", # Logging-related checks
  "G", # General logging format rules
  "PIE", # Miscellaneous unnecessary / suboptimal code patterns
  "PYI", # Stub file (.pyi) rules
  "Q", # Quote style rules
  "SLOT", # __slots__-related checks
  "TID", # Import restrictions / replacements
  "TD", # todo comment formatting/content rules
  "ARG", # Unused argument rules
  "PTH", # Prefer pathlib over os/path
  "FLY", # String literal joining / static join improvements
  "I", # Import sorting
  "NPY", # NumPy-specific checks
  "PD", # pandas-specific checks
  "PERF", # Performance-related improvements
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "DOC", # pydoclint: docstring/signature consistency
  "F", # Pyflakes: unused imports, undefined names, etc.
  "PGH", # pygrep-hooks rules
  "PLC", # Pylint convention rules
  "PLE", # Pylint error rules
  "PLR", # Pylint refactor rules
  "PLW", # Pylint warning rules
  "UP", # pyupgrade rules
  "FURB", # refurb modernization / simplification rules
  "RUF", # Ruff-specific rules
  "INP", # Implicit namespace package rules
]
ignore = [
  "G004", # Allow f-strings in logging calls
  "PLC1901", # Allow direct comparison against empty strings
  "PLR2004", # Allow magic values in comparisons
  "ANN101", # Do not require type annotation for self
  "ANN102", # Do not require type annotation for cls
  "ANN401", # Allow Any
  "ARG002", # Allow unused method arguments
  "INP001", # Allow implicit namespace packages
  "PGH004", # Allow blanket noqa comments
  "B008", # Allow function calls in default arguments (e.g. FastAPI Depends)
  "A002", # Allow function arguments to shadow builtins
  "A003", # Allow class attributes to shadow builtins
  "PLR0913", # Allow functions with many arguments
  "W191", # Allow tabs in indentation
  "E111", # Disable indentation-multiple-of-four enforcement
  "E114", # Disable indentation rule for comments
  "E117", # Disable over-indented check
]
[tool.ty.src]
include = ["src", "tests"]

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.rules]
deprecated = "warn"

invalid-argument-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
invalid-method-override = "error"
invalid-parameter-default = "error"
invalid-return-type = "error"
invalid-type-arguments = "error"

missing-argument = "error"
no-matching-overload = "error"
not-subscriptable = "error"

unresolved-attribute = "error"
unresolved-import = "error"
unresolved-reference = "error"

possibly-missing-attribute = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

redundant-cast = "warn"
unknown-argument = "warn"
unused-type-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = false
